--- a/packages/utils/scss/table/_table-layout.scss
+++ b/packages/utils/scss/table/_table-layout.scss
@@ -1,3 +1,5 @@
+// Table-layout documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/table-layout.
+
 /// This is equivalent to `table-layout: auto;`. By default, most browsers use an automatic table layout algorithm. The widths of the table and its cells are adjusted to fit the content.
 /// @name .k-table-layout-auto
 /// @group table-layout
