--- a/packages/default/scss/utils/_index.scss
+++ b/packages/default/scss/utils/_index.scss
@@ -6,22 +6,25 @@
 
 
 // Component
-@import "./_aspect-ratio.scss";
-@import "./_border.scss";
-@import "./_display.scss";
-@import "./_flex.scss";
-@import "./_float.scss";
-@import "./_grid.scss";
-@import "./_order.scss";
-@import "./_overflow.scss";
-@import "./_pointer-events.scss";
-@import "./_position.scss";
-@import "./_resize.scss";
-@import "./_spacing.scss";
-@import "./_spacer.scss";
-@import "./_table-layout.scss";
+// @import "./_aspect-ratio.scss";
+// @import "./_border.scss";
+// @import "./_display.scss";
+// @import "./_flex.scss";
+// @import "./_float.scss";
+// @import "./_grid.scss";
+// @import "./_order.scss";
+// @import "./_overflow.scss";
+// @import "./_pointer-events.scss";
+// @import "./_position.scss";
+// @import "./_resize.scss";
+// @import "./_spacing.scss";
+// @import "./_spacer.scss";
+// @import "./_table-layout.scss";
 @import "./_text.scss";
 @import "./_theme-colors.scss";
-@import "./_touch-action.scss";
-@import "./_transform.scss";
-@import "./_user-select.scss";
+// @import "./_touch-action.scss";
+// @import "./_transform.scss";
+// @import "./_user-select.scss";
+
+
+@import "@progress/kendo-theme-utils/scss/all.scss";
