--- a/packages/fluent/scss/upload/_layout.scss
+++ b/packages/fluent/scss/upload/_layout.scss
@@ -86,21 +86,6 @@
             border-color: inherit;
             list-style: none;
 
-            .k-file-multiple,
-            .k-file-single {
-                width: 100%;
-                display: flex;
-                justify-content: space-between;
-            }
-
-            .k-file-single {
-                align-items: center;
-            }
-
-            .k-file-multiple {
-                align-items: flex-start;
-            }
-
             .k-file {
                 padding-inline: var( --kendo-upload-item-padding-x, #{$kendo-upload-item-padding-x} );
                 padding-block: var( --kendo-upload-item-padding-y, #{$kendo-upload-item-padding-y} ) calc( var( --kendo-upload-item-padding-y, #{$kendo-upload-item-padding-y} ) + var( --kendo-upload-progress-thickness, #{$kendo-upload-progress-thickness} ) );
@@ -108,8 +93,12 @@
                 border-style: solid;
                 outline: none;
                 display: flex;
-                align-items: flex-start;
+                align-items: center;
                 position: relative;
+
+                &.k-file-multiple {
+                    align-items: flex-start;
+                }
             }
             .k-file:last-child {
                 border-width: 0;
@@ -185,27 +174,23 @@
         }
 
         .k-upload-files .k-file-info {
-            margin-inline-start: 0;
-            margin-inline-end: 0;
+            padding-inline-start: var( --kendo-padding-x, #{$kendo-padding-x} );
             min-height: var( --kendo-upload-group-icon-size, #{$kendo-upload-group-icon-size} );
             display: block;
             overflow: hidden;
             flex: 1 0 0;
-        }
-
-        .k-multiple-files-wrapper,
-        .k-file-single > .k-file-info {
-            margin-inline-start: var( --kendo-padding-x, #{$kendo-padding-md-x} );
-            margin-inline-end: 0;
-            min-height: var( --kendo-upload-group-icon-size, #{$kendo-upload-group-icon-size} );
-            display: block;
-            overflow: hidden;
-            flex: 1 0 0;
+            align-items: center;
         }
 
         .k-multiple-files-wrapper {
+            padding-inline-start: var( --kendo-padding-x, #{$kendo-padding-x} );
+            min-height: var( --kendo-upload-group-icon-size, #{$kendo-upload-group-icon-size} );
+            display: block;
+            overflow: hidden;
+            flex: 1 0 0;
 
             .k-file-info {
+                padding-inline-start: 0;
                 margin-block-end: var( --kendo-upload-multiple-items-spacing, #{$kendo-upload-multiple-items-spacing} );
                 display: block;
             }
