--- a/packages/default/scss/scheduler/_variables.scss
+++ b/packages/default/scss/scheduler/_variables.scss
@@ -8,6 +8,8 @@ $scheduler-bg: $component-bg !default;
 $scheduler-text: $component-text !default;
 $scheduler-border: $component-border !default;
 
+$scheduler-shadow: 0 .5px .5px .5px rgba(0, 0, 0, .12) !default;
+
 $scheduler-toolbar-bg: $kendo-toolbar-bg !default;
 $scheduler-toolbar-text: $kendo-toolbar-text !default;
 $scheduler-toolbar-border: $kendo-toolbar-border !default;
