--- a/packages/default/scss/pager/_variables.scss
+++ b/packages/default/scss/pager/_variables.scss
@@ -56,7 +56,7 @@ $kendo-pager-focus-shadow: $kendo-focus-shadow !default;
 
 /// Spacing between the pager sections.
 /// @group pager
-$kendo-pager-section-spacing: $spacer-x !default;
+$kendo-pager-section-spacing: k-map-get( $kendo-spacing, 4 ) !default;
 /// Border width of the pager items.
 /// @group pager
 $kendo-pager-item-border-width: 0px !default;
