--- a/packages/classic/scss/map/_variables.scss
+++ b/packages/classic/scss/map/_variables.scss
@@ -9,13 +9,13 @@ $map-bg: $kendo-component-bg !default;
 $map-text: $kendo-component-text !default;
 $map-border: $kendo-component-border !default;
 
-$map-navigator-margin: $spacer-x !default;
+$map-navigator-margin: k-map-get( $kendo-spacing, 4 ) !default;
 $map-navigator-padding: 2px !default;
 $map-navigator-width: calc( #{$icon-size * 3} + #{$map-navigator-padding * 2} ) !default;
 $map-navigator-height: $map-navigator-width !default;
 $map-navigator-border-width: 1px !default;
 
-$map-zoom-control-margin: $spacer-x !default;
+$map-zoom-control-margin: k-map-get( $kendo-spacing, 4 ) !default;
 $map-zoom-control-button-padding-x: $kendo-button-padding-y !default;
 $map-zoom-control-button-padding-y: $map-zoom-control-button-padding-x !default;
 
