--- a/packages/default/scss/common/_base.scss
+++ b/packages/default/scss/common/_base.scss
@@ -143,7 +143,7 @@
 @include exports( "common/misc/hr" ) {
 
     .k-hr {
-        margin: $spacer-y auto;
+        margin: k-map-get( $kendo-spacing, 4 ) auto;
         padding: 0;
         height: 0;
         border-width: 1px 0 0;
