--- a/packages/default/scss/editor/_layout.scss
+++ b/packages/default/scss/editor/_layout.scss
@@ -368,7 +368,7 @@
             flex: 1;
         }
         .k-search-wrap {
-            margin: 0 0 0 $spacer-x;
+            margin: 0 0 0 k-map-get( $kendo-spacing, 4 );
             width: 150px;
             display: flex;
             align-items: center;
@@ -385,7 +385,7 @@
 
         // Filebrowser toolbar
         .k-filebrowser-toolbar {
-            margin: $spacer-y 0 0 0;
+            margin: k-map-get( $kendo-spacing, 4 ) 0 0 0;
         }
 
         .k-upload {
@@ -412,7 +412,7 @@
             flex-flow: row wrap;
             height: 390px;
             max-height: 50vh;
-            margin: 0 0 $spacer-y 0;
+            margin: 0 0 k-map-get( $kendo-spacing, 4 ) 0;
             padding: $kendo-padding-md-y $kendo-padding-md-x;
             border-top-width: 0;
             overflow: auto;
