--- a/packages/default/scss/popover/_layout.scss
+++ b/packages/default/scss/popover/_layout.scss
@@ -25,9 +25,10 @@
     }
 
     .k-popover-inner {
+        height: inherit;
         position: relative;
         border-radius: inherit;
-        height: inherit;
+        border-color: inherit;
     }
 
     // Header
@@ -36,6 +37,7 @@
         padding: $kendo-popover-header-padding-y $kendo-popover-header-padding-x;
         border-width: 0 0 $kendo-popover-header-border-width;
         border-style: $kendo-popover-header-border-style;
+        border-color: inherit;
     }
 
     // Body
