--- a/packages/material/scss/button/_variables.scss
+++ b/packages/material/scss/button/_variables.scss
@@ -221,6 +221,9 @@ $kendo-flat-button-active-opacity: .16 !default;
 /// The overlay opacity of selected flat button. Used to create background for the flat button.
 /// @group button
 $kendo-flat-button-selected-opacity: .22 !default;
+/// The opacity of the flat button focus ring. Used to create border for the flat button.
+/// @group button
+$kendo-flat-button-focus-ring-opacity: null !default;
 
 /// The transition of the button.
 /// @group button
