fix(gantt): add a stronger td selector

--- a/packages/fluent/scss/gantt/_layout.scss
+++ b/packages/fluent/scss/gantt/_layout.scss
@@ -21,6 +21,10 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $kendo-color-rgba-transparent;
 
+        .k-table-td {
+            white-space: nowrap;
+        }
+
         // other
         td {
             overflow: hidden;
